completed article and code associated sparse and dense matrix comparision

--- a/efficient_ml/efficient_ml.ipynb
+++ b/efficient_ml/efficient_ml.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "62ecfc7d-39de-4279-8f8f-2554afee0395",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "dadb441c-91ef-4039-a2a2-ed7af06388e5",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "6042254c-25f5-4cd8-a1b0-38acb9c6ed44",
    "metadata": {},
    "outputs": [
@@ -103,32 +103,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.11 s, sys: 2.11 s, total: 5.22 s\n",
-      "Wall time: 6.87 s\n"
+      "CPU times: user 1.23 s, sys: 688 ms, total: 1.91 s\n",
+      "Wall time: 2.27 s\n"
      ]
     }
    ],
    "source": [
     "%%time \n",
     "df = generate_data(\n",
-    "    id_n = 100000,\n",
+    "    id_n = 50000,\n",
     "    prd_n = 1000\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "c6de6a8d-bfb6-4a2c-bdd2-7a0912256bb9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(100000, 1001)"
+       "(50000, 1001)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "6c8af3d9-bcc6-4877-bf91-8b1378500632",
    "metadata": {},
    "outputs": [],
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "38718d16-42cb-4e3a-b899-6944f3ebe463",
    "metadata": {},
    "outputs": [
@@ -157,8 +157,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 168 ms, sys: 375 ms, total: 542 ms\n",
-      "Wall time: 984 ms\n"
+      "CPU times: user 43.6 ms, sys: 72.2 ms, total: 116 ms\n",
+      "Wall time: 134 ms\n"
      ]
     }
    ],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "b2cd86a1-8215-4ac4-b9b3-53dce47a65ae",
    "metadata": {},
    "outputs": [
@@ -176,13 +176,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.57 s, sys: 924 ms, total: 2.5 s\n",
-      "Wall time: 3.3 s\n"
+      "CPU times: user 558 ms, sys: 284 ms, total: 843 ms\n",
+      "Wall time: 982 ms\n"
      ]
     }
    ],
    "source": [
     "%time sparse_vectors = scipy.sparse.csr_matrix(df[ft_cols].astype(float).values)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ae5a0bc-8d2e-4427-98ec-43e0363d7590",
+   "metadata": {},
+   "source": [
+    "Now that we have both a sparse and dense matrix, we can train a model on both to see which one performs better. I'll investigate this on the SVC model from sci-kit learn because support vector machines are known to have a high training and prediction latentcy based on it's architecture. This was confirmed by sci-kit learn's docs in their implementation [here](https://scikit-learn.org/stable/auto_examples/applications/plot_prediction_latency.html).   "
    ]
   },
   {
@@ -195,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "c910eab1-5c41-4513-b3a5-5abf1c53803b",
    "metadata": {},
    "outputs": [],
@@ -207,10 +215,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "5cad8466-dd2b-44e5-8cfd-035d2f7eebb2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2min 56s, sys: 3.11 s, total: 2min 59s\n",
+      "Wall time: 3min 5s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "SVC()"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%time\n",
     "dense_svc = SVC()\n",
@@ -227,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "155a2a2f-131b-4e2d-b3e1-f0c236e2e9e5",
    "metadata": {},
    "outputs": [],
@@ -239,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "e49a8a94-348c-4175-91d9-f545216eaa7d",
    "metadata": {},
    "outputs": [
@@ -247,8 +274,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 24.5 s, sys: 1.17 s, total: 25.6 s\n",
-      "Wall time: 27 s\n"
+      "CPU times: user 5.5 s, sys: 174 ms, total: 5.68 s\n",
+      "Wall time: 5.91 s\n"
      ]
     },
     {
@@ -257,7 +284,7 @@
        "SVC()"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,6 +293,35 @@
     "%%time\n",
     "sparse_svc = SVC()\n",
     "sparse_svc.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "7b2403ac-7960-4f15-8ad2-271988ffd1ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "31.302876480541453"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "185 / 5.91"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a64978a6-aebe-40fa-8320-c5c36b0f128b",
+   "metadata": {},
+   "source": [
+    "As we can see from the results above, the training speed of SVC significantly improved when using sparse vectors instead of dense vectors. Based on the time performance, we see that the improvement was 31x, which is quite substantial. This not only reduced run time for training the model but made a substantial improvement on the memory based on the nature and structure of sparse matricies.  "
    ]
   },
   {
@@ -278,19 +334,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "e0e14b66-2426-46bb-bd4a-f1b3793b2e25",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# generate dataset to predict on \n",
+    "pred_df = generate_data(\n",
+    "    id_n = 10000,\n",
+    "    prd_n = 1000\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e9b9f033-09f2-4512-9247-049c239bbad4",
+   "execution_count": 15,
+   "id": "f48fce1c-d861-4a18-8328-ea85afedfe5a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sparse_pred_mat = scipy.sparse.csr_matrix(pred_df[ft_cols].astype(float).values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e9b9f033-09f2-4512-9247-049c239bbad4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1min 3s, sys: 765 ms, total: 1min 4s\n",
+      "Wall time: 1min 5s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# dense matrix prediction\n",
+    "pred_df['dense_pred'] = pred_df[ft_cols].apply(lambda x : dense_svc.predict(x.values[None])[0], axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "1e883108-e880-4101-9943-d4d80b125d0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 15.5 s, sys: 129 ms, total: 15.6 s\n",
+      "Wall time: 16.5 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# sparse matrix prediction\n",
+    "pred_df['sparse_pred'] = [sparse_svc.predict(row)[0] for row in sparse_pred_mat]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "bd2d93d0-b51c-467a-b10e-66cb44d870fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.9393939393939394"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "65/16.5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "feee56bd-2c20-4a0f-8ba4-684a75896f40",
+   "metadata": {},
+   "source": [
+    "Just as a note, you can send in sparse vectors into prediction even when the model was not trained on sparse data and vice versa.  \n",
+    "Based on the performance you see above, you can see that the model predicts almost 4x faster when passing in sparse matricies. This is a substantial improvement especially when thinking about the run time and computing costs assocaited to having a model in production. This will make both real time & batch predictions much easier and efficient to implement in production."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -301,20 +437,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7fecb0cb-5eb6-4ba8-ae66-45f1a24a34a5",
+   "cell_type": "markdown",
+   "id": "e1e7bcfa-9fca-4c4a-a7bf-76d338098f31",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "696644db-0701-4ac0-8476-d8b0eb06943a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---"
+   ]
   }
  ],
  "metadata": {
