--- a/efficient_ml/efficient_ml.ipynb
+++ b/efficient_ml/efficient_ml.ipynb
@@ -13,30 +13,36 @@
    "id": "185d5323-742a-47d0-8cb6-a4a47621bb38",
    "metadata": {},
    "source": [
-    "Problem Outline: Common problem when dealing with large datasets and working in python is a matter of efficiency in both time and space complexity. Usual solutions to combat these problems are to either increase the computing power available for the computer (which can be expense) or to continue your pipeline in a distributive framework like Spark / Pyspark (which can be a hastle & exepnsive to set up). These sort of problems comes up often in industry settings, especially when working on problems which require you to aggregate a large amount of user data, problems associated to clustering / recommendation systems. Feeding all this data into inefficient models can be cumberson to deal with since the computer will most likely run out of memory. \n",
+    "**Problem Outline:** \n",
     "\n",
-    "Problem Solution:\n",
-    "We can solve this problem by optimizing the way we train and predict with our models, instead of passing in dense vectors for training & predicting, we pass in sparse vectors. As you will see below that this will drastically reduce both the speed and memory used for training and predicting with the model. \n",
+    "Common problem when dealing with large datasets and working in python is a matter of efficiency in both time and space complexity. Usual solutions to combat these problems are to either increase the computing power available for the computer (which can be expense) or to continue your pipeline in a distributive framework like Spark / Pyspark (which can be a hastle & exepnsive to set up). These sort of problems comes up often in industry settings, especially when working on problems which require you to aggregate a large amount of user data, problems associated to clustering / recommendation systems. Feeding all this data into inefficient models can be cumberson to deal with since the computer will most likely run out of memory. \n",
     "\n",
-    "Dense Matrix vs Sparse Matrix:\n",
+    "**Problem Solution:**\n",
+    "We can solve this problem by optimizing the way we train and predict with our models, instead of passing in vectors for training & predicting, we pass in sparse vectors. As you will see below that this will drastically reduce both the speed and memory used for training and predicting with the model. \n",
     "\n",
-    "- batch prediction\n",
-    "- real time prediction"
+    "**Matrix vs Sparse Matrix:**\n",
+    "In machine learning, there are two forms of matricies, they are sparse matricies, and dense matricies. A matrix is sparse if majority of the elements in the matrix has zero values whereas, a matrix is dense if majority of the elements in the matrix has non zero values. \n",
+    "\n",
+    "You would most commonly see sparse matricies when working with recommendation engines, encodings (for example 1-hot encoding), vectorizing etc. It's beneficial to work with sparse matricies in applied ML because it's much more efficient with both time and space complexity. It will reduce the memory necessary to store objects while making it more efficient computationally. You'll see later on that sci-kit learn is very well adept with sparse matricies and will decrease the memory and speed necessary to train large models. \n",
+    "\n",
+    "Operations using standard dense-matrix structures and algorithms are slow and inefficient when applied to large sparse matrices as processing and memory are wasted on the zeros. Sparse data is by nature more easily compressed and thus requires significantly less storage. Some very large sparse matrices are infeasible to manipulate using standard dense-matrix algorithms [1](https://en.wikipedia.org/wiki/Sparse_matrix).\n",
+    "\n",
+    "A matrix is typically stored as a two-dimensional array. Each entry in the array represents an element ai,j of the matrix and is accessed by the two indices i and j. Conventionally, i is the row index, numbered from top to bottom, and j is the column index, numbered from left to right. For an m × n matrix, the amount of memory required to store the matrix in this format is proportional to m × n (disregarding the fact that the dimensions of the matrix also need to be stored) [1](https://en.wikipedia.org/wiki/Sparse_matrix).\n",
+    "\n",
+    "In the case of a sparse matrix, substantial memory requirement reductions can be realized by storing only the non-zero entries. Depending on the number and distribution of the non-zero entries, different data structures can be used and yield huge savings in memory when compared to the basic approach. The trade-off is that accessing the individual elements becomes more complex and additional structures are needed to be able to recover the original matrix unambiguously [1](https://en.wikipedia.org/wiki/Sparse_matrix)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "62ecfc7d-39de-4279-8f8f-2554afee0395",
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
     "import scipy\n",
     "import uuid\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.svm import SVC"
@@ -51,8 +57,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3c8ecf56-bde9-4a43-bad3-b055a620299b",
+   "metadata": {},
+   "source": [
+    "We will begin by synthetically generating a dataset with a large amount of zeros using the random and pandas libraries. Through the use of the `pivot_table` function available in pandas we can replace all nan values in the pivot table with zeros. For the purposes of this tutorial, we'll create a dataframe with 50,000 rows and 1,001 columns. The final column will be associated to a category, and the remaining 1,000 will be features necessary to train a classifier to predict that category."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "dadb441c-91ef-4039-a2a2-ed7af06388e5",
    "metadata": {},
    "outputs": [],
@@ -95,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "6042254c-25f5-4cd8-a1b0-38acb9c6ed44",
    "metadata": {},
    "outputs": [
@@ -103,8 +117,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.23 s, sys: 688 ms, total: 1.91 s\n",
-      "Wall time: 2.27 s\n"
+      "CPU times: user 1.3 s, sys: 698 ms, total: 2 s\n",
+      "Wall time: 2.41 s\n"
      ]
     }
    ],
@@ -118,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "c6de6a8d-bfb6-4a2c-bdd2-7a0912256bb9",
    "metadata": {},
    "outputs": [
@@ -128,7 +142,7 @@
        "(50000, 1001)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "6c8af3d9-bcc6-4877-bf91-8b1378500632",
    "metadata": {},
    "outputs": [],
@@ -149,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "38718d16-42cb-4e3a-b899-6944f3ebe463",
    "metadata": {},
    "outputs": [
@@ -157,18 +171,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 43.6 ms, sys: 72.2 ms, total: 116 ms\n",
+      "CPU times: user 42.2 ms, sys: 66.8 ms, total: 109 ms\n",
       "Wall time: 134 ms\n"
      ]
     }
    ],
    "source": [
-    "%time dense_vectors = df[ft_cols].values"
+    "%time vectors = df[ft_cols].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "b2cd86a1-8215-4ac4-b9b3-53dce47a65ae",
    "metadata": {},
    "outputs": [
@@ -176,8 +190,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 558 ms, sys: 284 ms, total: 843 ms\n",
-      "Wall time: 982 ms\n"
+      "CPU times: user 543 ms, sys: 283 ms, total: 826 ms\n",
+      "Wall time: 999 ms\n"
      ]
     }
    ],
@@ -190,7 +204,7 @@
    "id": "5ae5a0bc-8d2e-4427-98ec-43e0363d7590",
    "metadata": {},
    "source": [
-    "Now that we have both a sparse and dense matrix, we can train a model on both to see which one performs better. I'll investigate this on the SVC model from sci-kit learn because support vector machines are known to have a high training and prediction latentcy based on it's architecture. This was confirmed by sci-kit learn's docs in their implementation [here](https://scikit-learn.org/stable/auto_examples/applications/plot_prediction_latency.html).   "
+    "Now that we have a matrix and a sparse matrix, we can train a model on both to see which one performs better. I'll investigate this on the SVC model from sci-kit learn because support vector machines are known to have a high training and prediction latentcy based on it's architecture. This was confirmed by sci-kit learn's docs in their implementation [here](https://scikit-learn.org/stable/auto_examples/applications/plot_prediction_latency.html).   "
    ]
   },
   {
@@ -198,24 +212,24 @@
    "id": "dfa19af7-0e45-454f-bf60-616acbf2aae9",
    "metadata": {},
    "source": [
-    "## SVC - Dense"
+    "## SVC "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "c910eab1-5c41-4513-b3a5-5abf1c53803b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = dense_vectors\n",
+    "X = vectors\n",
     "y = df['category'].values\n",
     "x_train, x_test, y_train, y_test = train_test_split(X ,y ,test_size = 0.7)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "5cad8466-dd2b-44e5-8cfd-035d2f7eebb2",
    "metadata": {},
    "outputs": [
@@ -223,8 +237,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2min 56s, sys: 3.11 s, total: 2min 59s\n",
-      "Wall time: 3min 5s\n"
+      "CPU times: user 3min 21s, sys: 4.57 s, total: 3min 26s\n",
+      "Wall time: 3min 37s\n"
      ]
     },
     {
@@ -233,15 +247,15 @@
        "SVC()"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%time\n",
-    "dense_svc = SVC()\n",
-    "dense_svc.fit(x_train, y_train)"
+    "svc = SVC()\n",
+    "svc.fit(x_train, y_train)"
    ]
   },
   {
@@ -254,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "155a2a2f-131b-4e2d-b3e1-f0c236e2e9e5",
    "metadata": {},
    "outputs": [],
@@ -266,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "e49a8a94-348c-4175-91d9-f545216eaa7d",
    "metadata": {},
    "outputs": [
@@ -274,8 +288,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5.5 s, sys: 174 ms, total: 5.68 s\n",
-      "Wall time: 5.91 s\n"
+      "CPU times: user 5.26 s, sys: 62.3 ms, total: 5.32 s\n",
+      "Wall time: 5.36 s\n"
      ]
     },
     {
@@ -284,7 +298,7 @@
        "SVC()"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "7b2403ac-7960-4f15-8ad2-271988ffd1ab",
    "metadata": {},
    "outputs": [
@@ -307,7 +321,7 @@
        "31.302876480541453"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +335,7 @@
    "id": "a64978a6-aebe-40fa-8320-c5c36b0f128b",
    "metadata": {},
    "source": [
-    "As we can see from the results above, the training speed of SVC significantly improved when using sparse vectors instead of dense vectors. Based on the time performance, we see that the improvement was 31x, which is quite substantial. This not only reduced run time for training the model but made a substantial improvement on the memory based on the nature and structure of sparse matricies.  "
+    "As we can see from the results above, the training speed of SVC significantly improved when using sparse vectors instead of regular vectors. Based on the time performance, we see that the improvement was 31x, which is quite substantial. This not only reduced run time for training the model but made a substantial improvement on the memory based on the nature and structure of sparse matricies.  "
    ]
   },
   {
@@ -334,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "e0e14b66-2426-46bb-bd4a-f1b3793b2e25",
    "metadata": {},
    "outputs": [],
@@ -348,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "f48fce1c-d861-4a18-8328-ea85afedfe5a",
    "metadata": {},
    "outputs": [],
@@ -358,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "e9b9f033-09f2-4512-9247-049c239bbad4",
    "metadata": {},
    "outputs": [
@@ -366,20 +380,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 3s, sys: 765 ms, total: 1min 4s\n",
+      "CPU times: user 1min 4s, sys: 460 ms, total: 1min 5s\n",
       "Wall time: 1min 5s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "# dense matrix prediction\n",
-    "pred_df['dense_pred'] = pred_df[ft_cols].apply(lambda x : dense_svc.predict(x.values[None])[0], axis = 1)"
+    "# regular matrix prediction\n",
+    "pred_df['mat_pred'] = pred_df[ft_cols].apply(lambda x : svc.predict(x.values[None])[0], axis = 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "1e883108-e880-4101-9943-d4d80b125d0d",
    "metadata": {},
    "outputs": [
@@ -387,8 +401,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 15.5 s, sys: 129 ms, total: 15.6 s\n",
-      "Wall time: 16.5 s\n"
+      "CPU times: user 14.4 s, sys: 43.3 ms, total: 14.4 s\n",
+      "Wall time: 14.6 s\n"
      ]
     }
    ],
@@ -400,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "bd2d93d0-b51c-467a-b10e-66cb44d870fc",
    "metadata": {},
    "outputs": [
@@ -410,7 +424,7 @@
        "3.9393939393939394"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
