added requriements file and updated docs in notebook for spelling mistakes

--- a/efficient_ml/efficient_ml.ipynb
+++ b/efficient_ml/efficient_ml.ipynb
@@ -13,23 +13,15 @@
    "id": "185d5323-742a-47d0-8cb6-a4a47621bb38",
    "metadata": {},
    "source": [
-    "**Problem Outline:** \n",
+    "Common problem when dealing with large datasets and working in python is a matter of efficiency in both time and space complexity. Usual solutions to combat these problems are to either increase the computing power available for the computer (which can be expense) or to continue your pipeline in a distributive framework like Spark / PySpark (which can be a hassle & expensive to set up). These sort of problems comes up often in industry settings, especially when working on problems which require you to aggregate a large amount of user data, problems associated to clustering / recommendation systems. Feeding all this data into inefficient models can be cumbersome to deal with since the computer will most likely run out of memory or it will take a lot of time to execute.\n",
+    "We can solve this problem by optimizing the way we train and predict sklearn models. Instead of passing in vectors for training & predicting, we pass in sparse vectors. As you will see below that this will drastically reduce both the speed and memory used for training and predicting with the model.  \n",
     "\n",
-    "Common problem when dealing with large datasets and working in python is a matter of efficiency in both time and space complexity. Usual solutions to combat these problems are to either increase the computing power available for the computer (which can be expense) or to continue your pipeline in a distributive framework like Spark / Pyspark (which can be a hastle & exepnsive to set up). These sort of problems comes up often in industry settings, especially when working on problems which require you to aggregate a large amount of user data, problems associated to clustering / recommendation systems. Feeding all this data into inefficient models can be cumberson to deal with since the computer will most likely run out of memory. \n",
+    "### What is a Sparse Matrix?\n",
+    "There are two forms of matrices, sparse and dense matrices. A matrix is sparse if majority of the elements in the matrix has zero values whereas, a matrix is dense if majority of the elements in the matrix has non zero values.  \n",
     "\n",
-    "**Problem Solution:**\n",
-    "We can solve this problem by optimizing the way we train and predict with our models, instead of passing in vectors for training & predicting, we pass in sparse vectors. As you will see below that this will drastically reduce both the speed and memory used for training and predicting with the model. \n",
+    "You would most commonly see sparse matrices when working with recommendation engines, encodings (for example 1-hot encoding), vectorizing etc. It's beneficial to work with sparse matrices in applied ML because it's much more efficient with both time and space complexity. It will reduce the memory necessary to store objects while making it more efficient computationally. You'll see later on that sci-kit learn is very well adept with sparse matrices and will decrease the memory and speed necessary to train and predict on large models. Operations using standard dense-matrix structures and algorithms are slow and inefficient when applied to large sparse matrices as processing and memory are wasted on the zeros [1]. Sparse data is easily compressible and requires less storage. Some very large sparse matrices are infeasible to manipulate using standard dense-matrix algorithms [1].  \n",
     "\n",
-    "**Matrix vs Sparse Matrix:**\n",
-    "In machine learning, there are two forms of matricies, they are sparse matricies, and dense matricies. A matrix is sparse if majority of the elements in the matrix has zero values whereas, a matrix is dense if majority of the elements in the matrix has non zero values. \n",
-    "\n",
-    "You would most commonly see sparse matricies when working with recommendation engines, encodings (for example 1-hot encoding), vectorizing etc. It's beneficial to work with sparse matricies in applied ML because it's much more efficient with both time and space complexity. It will reduce the memory necessary to store objects while making it more efficient computationally. You'll see later on that sci-kit learn is very well adept with sparse matricies and will decrease the memory and speed necessary to train large models. \n",
-    "\n",
-    "Operations using standard dense-matrix structures and algorithms are slow and inefficient when applied to large sparse matrices as processing and memory are wasted on the zeros. Sparse data is by nature more easily compressed and thus requires significantly less storage. Some very large sparse matrices are infeasible to manipulate using standard dense-matrix algorithms [1](https://en.wikipedia.org/wiki/Sparse_matrix).\n",
-    "\n",
-    "A matrix is typically stored as a two-dimensional array. Each entry in the array represents an element ai,j of the matrix and is accessed by the two indices i and j. Conventionally, i is the row index, numbered from top to bottom, and j is the column index, numbered from left to right. For an m × n matrix, the amount of memory required to store the matrix in this format is proportional to m × n (disregarding the fact that the dimensions of the matrix also need to be stored) [1](https://en.wikipedia.org/wiki/Sparse_matrix).\n",
-    "\n",
-    "In the case of a sparse matrix, substantial memory requirement reductions can be realized by storing only the non-zero entries. Depending on the number and distribution of the non-zero entries, different data structures can be used and yield huge savings in memory when compared to the basic approach. The trade-off is that accessing the individual elements becomes more complex and additional structures are needed to be able to recover the original matrix unambiguously [1](https://en.wikipedia.org/wiki/Sparse_matrix)."
+    "A matrix is generally stored as a two dimensional array. Each entry in the array represents an element which can be mapped to the row and column index in the matrix to correspond to the value in that element. For an m × n matrix, the amount of memory required to store the matrix in this format is proportional to m × n (disregarding the fact that the dimensions of the matrix also need to be stored) [1]. In the case of a sparse matrix, substantial memory requirement reductions can be realized by storing only the non-zero entries [1]. The frequency of non-zero entries in the matrix will also have an impact in saving memory and time.  "
    ]
   },
   {
@@ -61,7 +53,7 @@
    "id": "3c8ecf56-bde9-4a43-bad3-b055a620299b",
    "metadata": {},
    "source": [
-    "We will begin by synthetically generating a dataset with a large amount of zeros using the random and pandas libraries. Through the use of the `pivot_table` function available in pandas we can replace all nan values in the pivot table with zeros. For the purposes of this tutorial, we'll create a dataframe with 50,000 rows and 1,001 columns. The final column will be associated to a category, and the remaining 1,000 will be features necessary to train a classifier to predict that category."
+    "We will begin by synthetically generating a dataset with a large amount of zeros using the random and pandas libraries. Through the use of the pivot_table function available in pandas we can replace all nan values in the pivot table with zeros. For the purposes of this tutorial, we'll create a DataFrame with 50,000 rows and 1,001 columns. The final column will be associated to a category, and the remaining 1,000 will be features necessary to train a classifier to predict that category."
    ]
   },
   {
@@ -204,7 +196,7 @@
    "id": "5ae5a0bc-8d2e-4427-98ec-43e0363d7590",
    "metadata": {},
    "source": [
-    "Now that we have a matrix and a sparse matrix, we can train a model on both to see which one performs better. I'll investigate this on the SVC model from sci-kit learn because support vector machines are known to have a high training and prediction latentcy based on it's architecture. This was confirmed by sci-kit learn's docs in their implementation [here](https://scikit-learn.org/stable/auto_examples/applications/plot_prediction_latency.html).   "
+    "Now that we have a matrix and a sparse matrix, we can train a model on both to see which one performs better. I'll investigate this on the SVC model from sci-kit learn because support vector machines are known to have a high training and prediction latency based on it's architecture. This was confirmed by sci-kit learn's docs in their implementation here [2]."
    ]
   },
   {
@@ -335,7 +327,7 @@
    "id": "a64978a6-aebe-40fa-8320-c5c36b0f128b",
    "metadata": {},
    "source": [
-    "As we can see from the results above, the training speed of SVC significantly improved when using sparse vectors instead of regular vectors. Based on the time performance, we see that the improvement was 31x, which is quite substantial. This not only reduced run time for training the model but made a substantial improvement on the memory based on the nature and structure of sparse matricies.  "
+    "As we can see from the results above, the training speed of SVC significantly improved when using sparse vectors instead of regular vectors. Based on the time performance, we see that the improvement was 31x, which is quite substantial. This not only reduced run time for training the model but made a substantial improvement on the memory based on the nature and structure of sparse matrices."
    ]
   },
   {
@@ -438,8 +430,8 @@
    "id": "feee56bd-2c20-4a0f-8ba4-684a75896f40",
    "metadata": {},
    "source": [
-    "Just as a note, you can send in sparse vectors into prediction even when the model was not trained on sparse data and vice versa.  \n",
-    "Based on the performance you see above, you can see that the model predicts almost 4x faster when passing in sparse matricies. This is a substantial improvement especially when thinking about the run time and computing costs assocaited to having a model in production. This will make both real time & batch predictions much easier and efficient to implement in production."
+    "Just as a note, you can send in sparse vectors into prediction even when the model was not trained on sparse data and vice versa. \n",
+    "Based on the performance you see above, you can see that the model predicts almost 4x faster when passing in sparse matrices. This is a substantial improvement especially when thinking about the run time and computing costs associated to having a model in production. This will make both real time & batch predictions much easier and efficient to implement in production."
    ]
   },
   {
@@ -447,7 +439,8 @@
    "id": "ce79cffe-35bb-4e97-8f91-094e6aca2fd4",
    "metadata": {},
    "source": [
-    "As you might've noticed, this solution most likely won't have a large impact on your application if you are not working with a large & sparse dataset. When the dataset doesn't have a lot of zeros in it, converting it to a sparse matrix and running the calculations won't have the same impact (if any at all). When this is the case, my advice would be to try paralellizing your code to run on multiple pools / threads. This will aid in reducing the amount of time associated to generating predictions & training. "
+    "### Concluding Remarks\n",
+    "As you might've noticed, this solution most likely won't have a large impact on your application if you are not working with a large & sparse dataset. When the dataset doesn't have a lot of zeros in it, converting it to a sparse matrix and running the calculations won't have the same impact (if any at all). When this is the case, my advice would be to try parallelizing your code to run on multiple pools / threads. This will aid in reducing the amount of time associated to generating predictions & training."
    ]
   },
   {
