moved files from n2v directory to link_prediction directory

--- a/link_prediction/link_prediction.ipynb
+++ b/link_prediction/link_prediction.ipynb
@@ -2,24 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "12cf94c9-6228-4b6d-8b8a-4dd3f9db3db4",
+   "id": "98f17e3f-fcce-4aec-93f9-ad76897323cf",
    "metadata": {},
    "source": [
-    "# Link Prediction"
+    "# Link Prediction w/ n2v"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a1d5418-d73f-4fb3-8eed-f8cea53750f1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4bf01095-c57f-493a-9e9f-23925b7f3952",
+   "id": "fe6b94e0-f903-422f-baab-76010e772026",
    "metadata": {},
    "outputs": [],
    "source": []
