--- a/n2v/n2v.ipynb
+++ b/n2v/n2v.ipynb
@@ -330,7 +330,8 @@
     }
    ],
    "source": [
-    "for s in mdl.wv.most_similar('1'):\n",
+    "input_node = '1'\n",
+    "for s in mdl.wv.most_similar(input_node, topn = 10):\n",
     "    print(s)"
    ]
   },
