initialized link pred article

--- a/link_prediction/link_prediction.ipynb
+++ b/link_prediction/link_prediction.ipynb
@@ -10,8 +10,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fe6b94e0-f903-422f-baab-76010e772026",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import networkx as nx\n",
+    "import scipy as sp\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "from node2vec import node2vec as n2v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "304a4f74-723a-4e7c-9781-f55247b11df2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d16641c8-527f-4836-91eb-64fd20312914",
    "metadata": {},
    "outputs": [],
    "source": []
